tests/snapshots/test_const__typed_ast__const_dec.snap
---
source: tests/test-const.rs
expression: ast
---
Specification(
    [
        ConstDcl(
            ConstDcl {
                ty: IntegerType(
                    SignedInt(
                        SignedLongInt(
                            SignedLongInt,
                        ),
                    ),
                ),
                ident: Identifier(
                    "a",
                ),
                value: ConstExpr(
                    XorExpr(
                        AndExpr(
                            ShiftExpr(
                                AddExpr(
                                    MultExpr(
                                        UnaryExpr(
                                            PrimaryExpr(
                                                Literal(
                                                    IntegerLiteral(
                                                        DecNumber(
                                                            "10",
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            },
        ),
    ],
)
